PR review: fix npe potential NPP and use record instead of class for DTO
Signed-off-by: Jordan Martin <jo69270@gmail.com>